WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137989
[iOS] iPhone unselecting items in <select multiple> shows incorrect values selected
https://bugs.webkit.org/show_bug.cgi?id=137989
Summary
[iOS] iPhone unselecting items in <select multiple> shows incorrect values se...
Joseph Pecoraro
Reported
2014-10-22 17:26:14 PDT
iPhone unselecting items in <select multiple> shows incorrect values selected. * TEST <select multiple="multiple" id="stuff" name="stuff"> <option value="1">0001</option> <option value="2">0002</option> <option value="3">0003</option> </select> * STEPS TO REPRODUCE 1. Load test 2. Tap the <select> and select 0001, 0002, and 0003 3. Tap to unselect 0001, 0002, 0003 => expected to see "3 items" => "2 items" => "0003", => "0 Items" => actual results were "3 items" => "0001" => "0002" => "0003" We aren't treating taps on multi select form controls as multiple selection taps. We are treating them as full selections.
Attachments
[PATCH] Proposed Fix
(2.01 KB, patch)
2014-10-22 17:28 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2014-10-22 17:26:31 PDT
<
rdar://problem/18729429
>
Joseph Pecoraro
Comment 2
2014-10-22 17:28:05 PDT
Created
attachment 240310
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2014-10-23 12:38:25 PDT
Comment on
attachment 240310
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 240310 Committed
r175135
: <
http://trac.webkit.org/changeset/175135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug