[iOS] iPhone unselecting items in <select multiple> shows incorrect values selected https://bugs.webkit.org/show_bug.cgi?id=137989

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-10-23
Reviewed by Alexey Proskuryakov.

* UIProcess/ios/forms/WKFormSelectPicker.mm:
(-[WKMultipleSelectPicker pickerView:row:column:checked:]):
The second argument is "allowsMultipleSelection" and should only be set
when we are making a selection in a <select multiple>.

Canonical link: https://commits.webkit.org/155873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175135 268f45cc-cd09-0410-ab3c-d52691b4dbfc